# qxidc

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/cpp/: book1.cpp
demo2/: CMakeLists.txt  createtable.cpp  deletetable.cpp  filetoblob.cpp  inserttable.cpp  selecttable.cpp  updatetable.cpp
demo3/: CMakeLists.txt  book02.cpp  book06.cpp  book07.cpp  book08.cpp
demo_4job/: README.md  book01  book01.cpp  makefile
demo_cpp11/: book01  book01.cpp  book02  book02.cpp  book03  book03.cpp  makefile
demo_mysql/: createtable  dbblobtofile  dbblobtofile.cpp  deletetable  filetoblob  inserttable  makefile  selecttable  updatetable
demo_pthread/: CMakeLists.txt  book01  book01.cpp  book02  book03  book03.cpp  book04  book04.cpp  book05  book05.cpp  book06  book07  book08  book08.cpp  makefile
demo_signal/cpp/: bbook2.cpp  book1  book2  book2.cpp  book3  book3.cpp  makefile
demo_socket/: CMakeLists.txt  book01  book01.cpp  book02  book02.cpp  book03  book03.cpp  book04  book04.cpp  book05  book05.cpp  book06  book06.cpp  book07  book07.cpp  book08  book08.cpp  makefile  tcpclient  tcpclient.cpp  tcpclient1  tcpclient1.cpp  tcpclient2  tcpclient2.cpp  tcpepoll  tcpepoll.cpp  tcpepoll2  tcpepoll2.cpp  tcppoll  tcppoll.cpp  tcpselect  tcpselect.cpp  tmp.sh  tmp2.sh
doc/: db_qxidc.sql  study.md
idc/: CMakeLists.txt
idc/bak/: crtsurfdata1.cpp  crtsurfdata2.cpp  crtsurfdata3.cpp  crtsurfdata4.cpp  crtsurfdata5.cpp  crtsurfdata6.cpp  crtsurfdata7.cpp  obtmindtodb1.cpp  obtmindtodb2.cpp  obtmindtodb3.cpp
idc/cpp/: crtsurfdata.cpp  killall.sh  obtcodetodb.cpp  start.sh
idc/ini/: stcode.ini
idc/sql/: cleardata.sql  db_qxidc.sql
public/: .gitignore  CMakeLists.txt
public/db/: .gitignore
public/ftp/: .gitignore
tools/: CMakeLists.txt
tools/cpp/: checkproc.cpp  deletefiles.cpp  execsql.cpp  ftpgetfiles.cpp  gzipfiles.cpp  procctl.cpp
